styles/header.module.less
@import './variables.module.less';

.header {
  background: var(--cr-primary-bg);
  padding: 0;
  position: static;
  width: 100%;
  z-index: 1;
  height: 60px;

  ul {
    background: var(--cr-primary-bg);
    color: var(--cr-primary-text);
    border-bottom: 1px solid var(--cr-primary-border) !important;
    li {
      flex-grow: unset !important;

      @media (max-width: @screen-sm) {
        padding: 0 16px !important;
      }
    }
  }
}

.logo {
  padding: 0 24px !important;
  flex-grow: 1;

  &:hover {
    text-decoration: none;
    transition: none !important;
  }

  &::after {
    border-bottom: 0 !important;
  }
}

.search {
  margin-left: auto;
  padding-right: 0 !important;
}

.darkModeSwitchItem, .search {
  display: flex !important;
  align-items: center !important;
  user-select: none;
}

.darkModeSwitchItem {
  padding-left: 16px !important;
}

.darkModeSwitchItem::after, .search::after {
  display: none;
}

.darkModeSwitch {
  box-sizing: border-box;
  flex-direction: row;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 6px 8px;
  width: 77px;
  height: 34px;
  background: var(--cr-primary-bg);
  border-radius: 2px;
  border: 1px solid var(--cr-secondary-border);
  color: var(--cr-primary-text);

  > span {
    width: 100%;
    gap: 8px;
    display: flex;
  }

  img[alt="sun"] {
    border-radius: 2px;
    padding: 2px;
  }
 }

